fixed timer alignment after clicking settings

--- a/public/style.css
+++ b/public/style.css
@@ -414,4 +414,5 @@ button:active, .emoji-button:active {
 
 .timer {
     text-align: right;
+    display: block;
 }
